<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="author">Victoria Marcos</string>

    <string name="title_activity_inicio">Inicio</string>
 
	<string name="info">Info</string>
    
       
      
	<string name="list">Popular Movies</string>
    <string name="loadMovies">Loading</string>
 
    <string name="genre">Genre</string>
    <string name="popularity">Popularity</string>
    <string name="release">Release Year</string>
    
    <string name="ErrorCarga">Error</string>
    <string name="player_error">Player Error</string>
  
   
    <string name="about">About</string>
    <string name="exit">Exit</string>
   
    
      <string name="about_app_developed_by">application developed by</string>
    <string name="about_app_developed_by_author">Victoria Marcos</string>
  	<string name="about_app_description">List of popular movies</string>
   
    
    
    
    
    <!--  YOUTUBE STANDALONE -->
    
   

</resources>
